--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jest-coverage-badges": "jest-coverage-badges --output ./coverage/lcov-report"
   },
   "jest": {
-    "testRegex": "analyze-commits-jest.test.js",
+    "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.js$",
     "coverageReporters": [
       "json-summary",
       "text",
@@ -23,6 +23,7 @@
     "prettier": true,
     "space": true
   },
+  "homepage": "https://github.com/BondarenkoAlex/semantic-release-commits-lint#readme",
   "keywords": [
     "changelog",
     "commitlint",
@@ -55,20 +56,26 @@
     "@commitlint/lint": "^19.2.2",
     "@commitlint/load": "^19.2.0",
     "@commitlint/read": "^19.2.1",
+    "@semantic-release/error": "^4.0.0",
     "debug": "^4.3.5",
-    "lodash.isempty": "^4.4.0"
+    "lodash.isempty": "^4.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^29.6.0",
     "jest-coverage-badges": "^1.1.2",
     "semantic-release": "^18.0.0",
+    "tempy": "^3.1.0",
     "xo": "^0.58.0"
   },
   "peerDependencies": {
     "jest": "^29.6.0",
     "semantic-release": "^18.0.0",
     "xo": "^0.58.0"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "singleQuote": false
   },
   "files": [
     "lib",
