--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "cross-env": "^7.0.3",
     "jest": "^29.6.0",
     "jest-coverage-badges": "^1.1.2",
-    "semantic-release": "^18.0.0",
+    "semantic-release": "^20.0.0",
     "tempy": "^3.1.0",
     "xo": "^0.58.0"
   },
   "peerDependencies": {
     "jest": "^29.6.0",
-    "semantic-release": "^18.0.0",
+    "semantic-release": ">=20",
     "xo": "^0.58.0"
   },
   "prettier": {
